// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) If a script tag has no type, it i…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->
<script>
  export function Foo({ children }) {
    return <div className="lorem ipsum dolor sit amet">{children}</div>;
  }
</script>
"
`;

exports[`'(2) If a script tag has an empty type…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->
<script type="">
  export function Foo({ children }) {
    return <div className="lorem ipsum dolor sit amet">{children}</div>;
  }
</script>
"
`;

exports[`'(3) If a script tag has a type of \`te…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->
<script type="text/javascript">
  export function Foo({ children }) {
    return <div className="lorem ipsum dolor sit amet">{children}</div>;
  }
</script>
"
`;

exports[`'(4) If a script tag has a \`lang\` attr…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->
<script lang="ts" type="anything">
  interface MyInterface {
    foo(): string;
    bar: Array<number>;
  }
</script>
"
`;

exports[`'(5) Otherwise, leave Prettier\\'s outp…' > expectation 1`] = `
"<!-- --------------------------------------------------------------------------| printWidth=80 (in snapshot) -->
<script type="application/json">
  {
    "lorem": "ipsum",
    "dolor": "sit amet"
  }
</script>
"
`;
